css spacing fix

--- a/assets/themes/clean/css/style.css
+++ b/assets/themes/clean/css/style.css
@@ -64,3 +64,7 @@
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+.post-content {
+  overflow-x: scroll;
+}
